# skomakare

./: .gitignore  Cargo.toml  Makefile  NOTES  README.md  blender.notes  circle.lo  colorful_circle.lo  cool_pattern.lo  core.lo  graphics.lo  objfileshape.lo  pong.lo  setup.sh  test.lo  tictactoe.lo
data/square/: square.mtl
examples/: circle.lo  colorful_circle.lo  gun.lo  obj.lo  pong.lo  racing.lo  test.lo  text.lo  text2.lo  tictactoe.lo  tutorial.lo
misc/: SHORTCUTS  blender.notes  notes  notes1  opengl_matrices.notes  racing1.lo  rust_type_text.rs  tutorial.lo
misc/rusttype_freetype/: Cargo.toml
misc/rusttype_freetype/src/: main.rs
old/: README.md  test.html
old/misc/: TODO
old/piston/: Cargo.toml
old/piston/src/: main.rs
old/shaders/: shader.vert
old/src_c/: blend_format.h  gio.c  gio.h  init.h  object.h  ogre.h  repl.c
old/src_scm/: graphics.scm  ogre.scm  utils.scm
old/super_old/misc/: OGRE_API  license
old/super_old/shaders/: shader.frag
old/super_old/src_c/: blend_format.c  config.h  gl.h  init.c  main.c  ogre.cpp  repl.h
old/super_old/src_scm/: db.scm
src/: camera.rs  data.rs  game.rs  main.rs  main3d.rs  model.rs  scene.rs  shaders.rs  types.rs  utils.rs
src/old/: main3d.rs  old_code.rs
src_c/: blend_format.c  gio.c  gl.c  main.c  utils.c  utils.h
src_scm/: blend_format.scm  blend_format.scm1  flat_index.scm  gio.scm  test.scm
